main.tf
########################
# VPC
########################
resource "aws_vpc" "devops_vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "devops-vpc"
  }
}

########################
# Subnet
########################
resource "aws_subnet" "devops_subnet" {
  vpc_id                  = aws_vpc.devops_vpc.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "ap-south-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "devops-subnet"
  }
}

########################
# Internet Gateway
########################
resource "aws_internet_gateway" "devops_igw" {
  vpc_id = aws_vpc.devops_vpc.id

  tags = {
    Name = "devops-igw"
  }
}

########################
# Route Table
########################
resource "aws_route_table" "devops_rt" {
  vpc_id = aws_vpc.devops_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.devops_igw.id
  }

  tags = {
    Name = "devops-rt"
  }
}

resource "aws_route_table_association" "devops_rta" {
  subnet_id      = aws_subnet.devops_subnet.id
  route_table_id = aws_route_table.devops_rt.id
}

########################
# Security Group
########################
resource "aws_security_group" "devops_sg" {
  name   = "devops-sg"
  vpc_id = aws_vpc.devops_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "devops-sg"
  }
}

########################
# EC2 Instance
########################
resource "aws_instance" "devops_ec2" {
  ami                    = "ami-03bb6d83c60fc5f7c" # Ubuntu 22.04 (Mumbai)
  instance_type          = var.instance_type
  key_name               = var.key_name
  subnet_id              = aws_subnet.devops_subnet.id
  vpc_security_group_ids = [aws_security_group.devops_sg.id]

  user_data = <<-EOF
              #!/bin/bash
              set -e

              # Update system
              apt-get update -y

              # Install Docker
              apt-get install -y docker.io

              # Start & enable Docker
              systemctl start docker
              systemctl enable docker

              # Allow ubuntu user to run docker
              usermod -aG docker ubuntu

              # Pull application image
              docker pull iamtamil0/devops-cicd-app:latest

              # Run container
              docker run -d \
                --restart unless-stopped \
                --name devops-cicd-app \
                -p 80:5000 \
                iamtamil0/devops-cicd-app:latest
              EOF

  tags = {
    Name = var.instance_name
  }
}
